--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -1,1 +1,18 @@
 \chapter{Baryonic Structures}
+
+
+\section{State and distribution of baryons}
+
+
+We want to include baryons in the study of non-linear structure formation.
+
+% TODO figure big bang againg
+
+\subsection{Evolution of baryons}
+Before recombination and decoupling, the baryons were an ionized plasma.
+
+After recombination, they are mostly neutral and in atomic form. At that point, there is little emission, which why this period is called the dark ages.
+
+At later times ($z \approx 6$ -- $20$), the first stars start to form, which emit UV photons that re-ionize the baryons and end the dark ages. This is called the Epoch of Reionization (EoR).
+
+Following this, the baryons continue to participate in structure formation, driven by dark matter.
