Add images in 4.9

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -11,7 +11,7 @@ The theoretical basis of cosmology is General Relativity (GR). In contrary to Ne
 
 As an illustration we consider a two-dimensional space with a coordinate system $x^\mu$, where $\mu =$ 1, 2. The physical square distance is then $ds^2 = g_{\mu\nu} \mathrm{d}x^{\mu}\mathrm{d}x^{\nu}$ where $\mathrm{d}x^{\mu}$ and $\mathrm{d}x^{\nu}$ are the coordinate distances. Assuming that the space is homogeneous and isotropic the distance can be written as
 \begin{align*}
-	ds^2 = a^2 (\frac{\mathrm{d}r^2}{1-kr^2} + r^2 \mathrm{d}\phi^2)
+	ds^2 = a^2 \left(\frac{\mathrm{d}r^2}{1-kr^2} + r^2 \mathrm{d}\phi^2\right)
 \end{align*}
 where $k$ describes the curvature and $a$ is the length scale known as the scale factor which can also be time-dependent. If the scale factor is time dependent this means that the surface is uniformly expanding or contracting. The curvature $k$ for a homogeneous and isotropic surface is either $k$ = 0 for a plane, $k$ = 1 for a sphere or the curvature is negative $k$ = -1 for a hyperbolic surface. In order to describe the sphere the coordinate transformation $r$ = $sin\chi$ is used and to describe the hyperbolic surface $r$ = $sinh\chi$. 
 
